#57 I can filter articles by workgroup
update lib "postgres-json:1.2.1"
